Unhidding instagram contact box a fixing her alignment.

--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -224,6 +224,13 @@
 @media(max-width:1100px) {
 	.space_right_img { right: -56px; }
 }
+@media(max-width:1030px) {
+    .contact-box {
+        flex-wrap: wrap;
+        flex-direction: column;
+        align-items: center;
+    }
+}
 @media(max-width:992px) {
 	.iq-breadcrumb-five .title { font-size: 30px; }
 	h2 { font-size: 30px; }
